add spotbugs (#10522)